6 November 2004 Sylvain Pion
- Add move_point() to Regular_3 (not documented because not tested yet).

27 September 2004 Sylvain Pion
- Rename Triangulation_cell_base_with_hidden_points_3 into
  Regular_triangulation_cell_base_3.

20 September 2004 Andreas Fabri
- Made derivation in Regular_triangulation_euclidean_traits_3 public
- Add a short name macro for Regular_triangulation_filtered_traits_3.

15 September 2004 Sylvain Pion
- Remove unused code to please g++ 2.95.

14 September 2004 Sylvain Pion
- Specialize Regular_traits_3<> for Exact_pred_inexact_const_kernel, so that
  it becomes automatically the filtered traits (and thus gets better backward
  compat).

13 September 2004 Sylvain Pion
- Regular traits : make functor classes parameterized by K (meant to be the
  regular traits, or the kernel when WPs will be there).
- Add Regular_triangulation_filtered_traits_3.

7 September 2004 Sylvain Pion
- Regular_triangulation_3 now fetches "Weighted_point_3" instead of
  "Weighted_point" from the traits (which still exports both for backward
  compat reasons).
- Traits functors fixes :
  - added Arity typedef and result_type
  - make functors const, and pass references instead of values.

31 August 2004 Monique Teillaud
- minor doc fixes (display authors)

30 August 2004 Christophe Delage
- added remove() to Regular_triangulation_3 (doesn't work in 2D, yet.)
- added Triangulation_cell_base_with_hidden_points_3.h so that
  Regular_triangulation_3 can remember (and reinsert) hidden points.

26 August 2004 Monique Teillaud
- fixed pdf figures forgotten yesterday...

25 Augusts 2004 Mariette
- move the Weighted_tag definition from Delaunay_triangulation_3
  to Triangulation_3 so that any triangulation has a Weighted_tag

25 August 2004 Monique Teillaud
- new pdf figures, fixing the bounding boxes

19 August 2004 Monique Teillaud
- fixes in the bibliography
- pdf conversion of figures added

13 August 2004 Sylvain Pion