@@ -43,6 +43,7 @@ all:            \
                 test_delaunay_3_old_remove$(EXE_EXT) \
                 test_delaunay_hierarchy_3$(EXE_EXT) \
                 test_regular_3$(EXE_EXT) \
+                test_regular_as_delaunay_3$(EXE_EXT) \
                 test_regular_traits_3$(EXE_EXT) \
                 test_triangulation_3$(EXE_EXT) \
                 test_triangulation_tds$(EXE_EXT) 
@@ -59,6 +60,9 @@ test_delaunay_hierarchy_3$(EXE_EXT): test_delaunay_hierarchy_3$(OBJ_EXT)
 test_regular_3$(EXE_EXT): test_regular_3$(OBJ_EXT)
 	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_regular_3 test_regular_3$(OBJ_EXT) $(LDFLAGS)
 
+test_regular_as_delaunay_3$(EXE_EXT): test_regular_as_delaunay_3$(OBJ_EXT)
+	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_regular_as_delaunay_3 test_regular_as_delaunay_3$(OBJ_EXT) $(LDFLAGS)
+
 test_regular_traits_3$(EXE_EXT): test_regular_traits_3$(OBJ_EXT)
 	$(CGAL_CXX) $(LIBPATH) $(EXE_OPT)test_regular_traits_3 test_regular_traits_3$(OBJ_EXT) $(LDFLAGS)
 
@@ -73,6 +77,7 @@ clean: \
                    test_delaunay_3_old_remove.clean \
                    test_delaunay_hierarchy_3.clean \
                    test_regular_3.clean \
+                   test_regular_as_delaunay_3.clean \
                    test_regular_traits_3.clean \
                    test_triangulation_3.clean \
                    test_triangulation_tds.clean 
